# note-mesh

./: .env.example  .gitignore  LICENSE  NoteMesh_API_Collection.postman_collection.json  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 0142f314ad72_add_httpurllisttype_converter_for_.py  29cd85636a86_add_missing_permission_column_to_shares_.py  4e702a2d2f86_initial_database_schema_with_all_models.py  90315b5d270d_initial_database_schema.py
backend/src/notemesh/: __init__.py  config.py  database.py  main.py
backend/src/notemesh/api/: __init__.py  auth.py  health.py  notes.py  search.py  sharing.py
backend/src/notemesh/core/: logging.py  redis_client.py
backend/src/notemesh/core/models/: __init__.py  base.py  note.py  refresh_token.py  share.py  tag.py  types.py  user.py
backend/src/notemesh/core/repositories/: __init__.py  note_repository.py  refresh_token_repository.py  share_repository.py  user_repository.py
backend/src/notemesh/core/schemas/: __init__.py  auth.py  common.py  notes.py  sharing.py
backend/src/notemesh/core/services/: __init__.py  auth_service.py  health_service.py  interfaces.py  note_service.py  search_service.py  sharing_service.py
backend/src/notemesh/middleware/: __init__.py  auth.py
backend/src/notemesh/security/: __init__.py  jwt.py  password.py
backend/tests/: conftest.py  debug_final_tag_search.py  debug_tag_search.py  test_api_endpoints.py  test_basic.py  test_imports.py  verify_postgres.py
backend/tests/integration/: test_note_sharing_workflow.py  test_search_end_to_end.py  test_search_tag_filter_integration.py  test_tag_search_real_integration.py
backend/tests/unit/: test_config.py  test_security_jwt.py  test_security_password.py
backend/tests/unit/api/: test_auth_api.py
backend/tests/unit/core/: test_redis_auth_caching.py  test_redis_blacklist_management.py  test_redis_cache_first_search.py  test_redis_comprehensive_validation.py  test_redis_fulltext_search.py  test_redis_ttl_session_analysis.py
backend/tests/unit/core/repositories/: test_note_repository.py  test_note_repository_coverage.py  test_note_repository_shared_search.py  test_note_repository_tag_filter.py  test_refresh_token_repository.py  test_share_repository.py  test_share_repository_coverage.py  test_tag_search_regression.py  (+2 more)
backend/tests/unit/middleware/: test_auth_middleware.py
backend/tests/unit/models/: test_models_base.py  test_models_note.py  test_models_refresh_token.py  test_models_share.py  test_models_tag.py  test_models_user.py
backend/tests/unit/schemas/: test_notes_schema.py
backend/tests/unit/security/: test_jwt.py  test_password.py
(+31 files in other folders)
